# umgebung

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Cargo.toml  LICENSE  README.md  vcpkg-configuration.json
include/: CMakeLists.txt  Matter.h
include/umgebung/: Density.h  Logger.h  Matter.h  Multiverse.h  PhysicalDensity.h  Universe.h  VibrationalDensity.h
src/: CMakeLists.txt  Density.cpp  Logger.cpp  Matter.cpp  Multiverse.cpp  PhysicalDensity.cpp  Universe.cpp  VibrationalDensity.cpp  main.cpp  main.cu
